# rag-rage

./: .gitignore
data/: big.xlsx  biggest.xlsx  processed_khas_bank_branches_minimal 6.xlsx  processed_khas_bank_news 4.xlsx  processed_khas_bank_news 6.xlsx  processed_khas_bank_pages 5.xlsx  processed_khas_bank_products 3.xlsx
src/: .gitignore  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/code_final/: .gitignore  Dockerfile  api_test.py  app.py  data_clean.py  data_load.py  data_process.ipynb  drug_data_preprocess.py  rag_chain.py  requirements.txt  st.py  test.txt
src/code_final/data/: data.xlsx
src/code_final/notebooks/: eclinic_scrape.ipynb  main.ipynb
src/code_final/statistics/: stat_data.xlsx
src/code_final/ui/: sidebar.md  styles.md
src/code_final/utils/: ui.py
src/core/: views.py
src/core/static/css/: styles.css
src/core/templates/: base.html
src/core/templates/core/: chat.html  index.html
src/core/templates/partials/: response.html
src/data_excel/: processed_khas_bank_branches.xlsx  processed_khas_bank_news.xlsx  processed_khas_bank_pages.xlsx  processed_khas_bank_products.xlsx
src/has/: asgi.py  settings.py  urls.py  wsgi.py
